--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "pytest-asyncio>=1.1.0",
     "pytest-cov>=6.3.0",
     "pytest-playwright>=0.7.1",
+    "python-dotenv>=1.1.1",
     "python-fasthtml>=0.12.25",
     "requests>=2.32.5",
     "werkzeug>=3.1.3",
