Modificar sistema de email para usar apenas texto puro
- Removido parâmetro html_body do método send_email
- Removido todo código HTML dos métodos de email
- Simplificado envio para usar apenas texto puro
- Emails agora são mais leves e compatíveis

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "python-dotenv>=1.1.1",
     "python-fasthtml>=0.12.25",
     "requests>=2.32.5",
+    "vieutil>=0.5",
     "werkzeug>=3.1.3",
 ]
 
