Feature: Implementar hostname configurável para emails\n\n- Adicionar variável HOSTNAME no config.py\n- Atualizar .env e .env.example com HOSTNAME\n- Criar documentação CONFIGURACAO_HOSTNAME.md\n- Hostname padrão: garantia70mil.viemar.com.br\n- Em desenvolvimento: localhost:8000\n- URLs nos emails agora usam hostname configurável

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,11 @@ HOST=0.0.0.0
 PORT=8000
 DEBUG=False
 
+# Hostname da aplicação (usado nos emails e URLs)
+# Em desenvolvimento: localhost:8000
+# Em produção: garantia70mil.viemar.com.br
+HOSTNAME=garantia70mil.viemar.com.br
+
 # Configurações de Segurança
 SECRET_KEY=your-super-secret-key-here-change-this-in-production
 SESSION_TIMEOUT=3600
