Fix: Correções de encoding e integração com Firebird
- Corrigido acesso a dados do Firebird (tuplas em vez de dicionários)
- Alterado encoding de UTF-8 para ISO-8859-1 para compatibilidade
- Removido commit manual desnecessário (fastlite gerencia automaticamente)
- Adicionado teste automatizado de autenticação e sincronização
- Integração com Firebird funcionando corretamente

--- a/.env.example
+++ b/.env.example
@@ -28,3 +28,11 @@ LOG_LEVEL=INFO
 # Credenciais do Administrador Padrão
 ADMIN_EMAIL=admin@viemar.com.br
 ADMIN_PASSWORD=change-this-secure-password
+
+# Configurações do Firebird ERP
+FIREBIRD_HOST=discovery
+FIREBIRD_USER=VIEMAR
+FIREBIRD_PASSWORD=@Tec#Viemar!
+FIREBIRD_DATABASE=/ssd/tecnicon/dados/emp17.fdb
+FIREBIRD_ROLE=TECNICONE
+FIREBIRD_CHARSET=ISO88591
